# cpp-boiler

./: .add_file.py.swp  .gitignore  CLI.py  README.md  add_file.py  main.py  make_project.py  utilities.py
lib/: add_file.py  make_project.py
templates/_generic/: generic_class.cpp  generic_class.h  generic_header.h
templates/basic/: CMakeLists.txt  build.sh
templates/basic/.cache/clangd/index/: main.cpp.B2CAF73BE9EC02AE.idx  test.cpp.4BD2F008E5074C48.idx  test.hpp.43C54C601A292172.idx
templates/basic/include/: test.hpp
